--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -45,6 +45,7 @@ body{
     flex-direction: column; 
     justify-content: center;
     align-items: center;
+    color: white;
 
     &__welcome{
       color: blue;
@@ -64,9 +65,9 @@ body{
 
       &__dinamic-text{
         font-weight: 500;
-        color: purple ;
+        color: #ffbd59 ;
       }
-      
+
       @include mobile {
         display: flex;
         flex-direction: column;
@@ -74,40 +75,382 @@ body{
         width: 100%;
       }
     }
+    &__parag{
+      font-size: 18px;
+      font-weight: 300;
+      width: 1100px;
+      color:#b8b8b8;
 
-    
+      @include mobile{
+        width: 100%;
+      }
+    }
 
   }
 
   &__skills{
-    background-color:black;
+    background-color: black;
     grid-area: skills;
-
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    box-shadow: 0px -10px 80px 50px rgba(0,0,0,1);
 
     &__container{
       position: absolute;
-      top:-100px;
-      background-color: #545454;
+      top:-50px;
+      background-color: #151515;
       border-radius: 50px;
-      width: 50%;
+      width: 70%;
       height: 100%;
+      color: white;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      gap: 30px;
+      @include mobile {
+        width: 95%;
+      }
+
+      &__title{
+        letter-spacing: 1.5px;
+        text-align: center;
+        font-size: 50px;
+      }
+      &__parag{
+        text-align: center;
+        font-size: 20px;
+        color: #b8b8b8;
+      }
+    }
+    &__container-logos{
+      // background-color: red;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      width: 100%;
+
+      &__button{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: black;
+        color: white;
+        font-size: 20px;
+        cursor: pointer;
+      }
+
+      &__logos{
+        display: flex;
+        flex-direction: column;
+
+        &__img{
+          object-fit: cover;
+          display: block;
+          width: 250px;
+          height: 250px;
+          object-fit: contain;
+
+          @include mobile{
+            width: 200px;
+            height: 200px;
+          }
+        }
+        &__title{
+          text-align: center;
+          color: white;
+          font-size: 20px;
+          font-weight: 300;
+        }
+      }
     }
   }
   &__projects{
-    background-color: aquamarine;
+    background-color: #151515;
     grid-area: projects;
   }
   &__contact{
-    background-color: purple;
+    // background: linear-gradient(90deg,#aa367c -5.91%,#4a2fbd 111.58%);
+    background: linear-gradient(90deg,#ad9145 -5.91%,#cc6f05 111.58%);
+    box-shadow: 0px -10px 70px 20px rgba(204,111,5,0.4);
+
     grid-area: contact;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &__img{
+      width: 40%;
+      max-height: 600px;
+    }
+    
+    &__container-form{
+      width: 700px;
+      height: 600px;
+      // background-color: green;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+
+      &__title{
+        // background-color: black;
+        color: white;
+        font-size: 50px;
+        font-weight: 400;
+      }
+
+      &__button{
+        background-color: white;
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 150px;
+        height: 50px;
+        border: none;
+        border-radius: 2px;
+        font-size: 17px;
+        color: #cc6005;
+        font-weight: 300;
+        transition: transform 0.3s ease-in-out;
+        cursor: pointer;
+
+        &:hover{
+          transform: scale(1.1);
+        }
+
+      }
+    }
+
+    &__container-inputs{
+      width: 700px;
+      height: 400px;
+      // background-color: red;
+      display: grid;
+      gap: 20px;
+      grid-template:
+      "area1 area2" 1fr
+      "area3 area3" 5fr/
+      auto;
+
+      &__input{
+        border-radius: 20px;
+        border: 1px solid white;
+        padding: 20px;
+        background: hsla(0,0%,100%,.1);
+        font-size: 17px;
+        color: white;
+      font-weight: 300;
+
+      }
+      &__input::placeholder{
+        color: white;
+        margin-left: 20px;
+        font-size: 17px;
+      }
+      &__input:focus{
+        background-color: rgba(255,255,255,.4);
+        outline: none;
+      }
+
+      &__input--1{
+        grid-area: area1;
+      }
+      &__input--2{
+        grid-area: area2;
+      }
+      &__input--3{
+        grid-area: area3;
+      }
+    }
+
+
+    @include mobile{
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+
+      &__container-form{
+
+        &__button{
+          width: 100px;
+          height: 100px;
+        }
+      }
+
+      &__img{
+        width: 100%;
+        height: auto;
+      }
+      &__container-form{
+        // background-color: red;
+        width: 100%;
+        height: 550px;
+      }
+      &__container-inputs{
+        // background-color: green;
+        width: 95%;
+        
+        grid-template: 
+        "area1" 1fr
+        "area2" 1fr
+        "area3" 4fr;
+      }
+    }
+
   }
   &__footer{
-    background-color: yellow;
+    background-image:url(../images/footer.png);
+    background-size: cover;
     grid-area: footer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    &__container-first{
+      width: 100%;
+      height: 50%;
+      // background-color: red;
+      display: flex;
+      justify-content: center;
+      position: relative;
+
+      &__cont-thanks{
+        position: absolute;
+        top: -35px;
+        width: 70%;
+        height: 120%;
+        background-color: white;
+        color: black;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+
+        &__thanks{
+          font-size: 40px;
+          margin-left: 100px;
+        }
+      }
+    }
+
+    &__container-all{
+      height: 50%;
+      width: 100vw;
+      // background-color: green;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+
+      &__logo{
+        color: white;
+        font-size: 40px;
+        font-weight: 500;
+      }
+    }
+
+    &__container-icons{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+
+      &__logos{
+        height: 60px;
+        width: 60px;
+        background-color: black;
+        border-radius: 50%;
+        border: 1px solid white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        overflow: hidden;
+
+        &__link{
+          position: relative;
+          width: 25px;
+          height: 25px;
+          background-image: url('../images/github-blanco.png');
+          background-size: contain;
+        }
+
+        &__link--linkedin{
+          background-image: url('../images/linkedin-blanco.png');
+        }
+
+        &:hover .home__footer__container-icons__logos__link{
+          background-image: url('../images/github-negro.png');
+        }
+
+        &:hover .home__footer__container-icons__logos__link--linkedin{
+          background-image: url('../images/linkedin-negro.png');
+        }
+
+        &::before{
+          content: '';
+          width: 1px;
+          height: 1px;
+          border-radius: 50%;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          background-color: none;
+          transition: transform 0.4s linear;
+        }
+
+        &:hover::before{
+          transform: scale(100);
+          background-color: white;
+        }
+      }
+    }
+
+    @include mobile{
+      background-size: cover;
+
+      &__container-first{
+
+        &__cont-thanks{
+
+          height: 100%;
+
+          &__thanks{
+            font-size: 20px;
+            margin-left: 10px;
+          }
+        }
+      }
+
+
+
+      &__container-all{
+        flex-direction: column;
+      }
+
+
+      &__container-icons{
+
+
+        &__logos{
+          height: 50px;
+          width: 50px;
+
+          &__link{
+            height: 17px;
+            width: 17px;
+          }
+        }
+      }
+    }
+
   }
 
   @include mobile{
@@ -139,12 +482,12 @@ body{
     font-weight: 500;
     font-size: 32px;
     &__link{
-    font-family: 'Fredoka One';
+      font-family: 'Fredoka One';
       color:white;
       text-decoration: none;
     }
     &__link-lastname{
-    font-family: 'Fredoka One';
+      font-family: 'Fredoka One';
       color: #ffbd59;
     }
   }
@@ -152,22 +495,24 @@ body{
   &__container-all{
     width: 40%;
     height: 100%;
-    // background-color: red;
+    // background-color: #151515;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   &__icon{
     display: none;
-    background-color: white;
     width: 25px;
     height: 25px;
+    border-radius: 5px;
     &__ham{
-      width: 20px;
-      height: 20px;
+      width: 25px;
+      height: 25px;
     }
    @include mobile{
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-right: 20px;
    }
     
@@ -200,12 +545,62 @@ body{
       // background-color: green;
 
       &__git{
-        background-color: white;
+        // background-color: white;
         border-radius: 50%;
-        background-image: url('../images/github.png');
+        background-image: url('../images/github-blanco.png');
         background-size: contain;
-        width: 30px;
-        height: 30px;
+        width: 35px;
+        height: 35px;
+      }
+
+      &__cv{
+        background-image: url('../images/download-cv.png');
+        background-size: contain;
+        width: 35px;
+        height: 35px;
+      }
+
+      &__contact{
+        border: white solid 1px;
+        text-align: center;
+        width: 120px;
+        height: 50px;
+        padding: 10px;
+        color: white;
+        text-decoration: none;
+        position: relative;
+        overflow: hidden;
+        cursor: default;
+        
+        &__me{
+          position: relative;
+          z-index: 20;
+        }
+
+        &:hover::before{
+          transform: translateX(0);
+          color: black;
+        }
+        &:hover{
+          color: black;
+        }
+
+        &::before{
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: white;
+          transform: translateX(-100%);
+          transition: transform 0.5s;
+          z-index: 10;
+        }
+
       }
     }
   
@@ -227,6 +622,7 @@ body{
     }
 
     &__container-all-active{
+      background-color: #151515;
       display: block;
       position: fixed;
       top: 32px;
