--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -193,8 +193,8 @@ body{
       gap: 40px;
 
       &__img{
-        width: 400px;
-        height: 400px;
+        width: 500px;
+        height: 500px;
         border-radius: 20px;
         background-image: url('../images/spotify-replica-previa.png');
         background-size: cover;
@@ -234,6 +234,7 @@ body{
             gap: 60px;
           }
         }
+        
 
 
         &:hover::before{
@@ -254,6 +255,10 @@ body{
           top: 0;
         }
 
+        &--videogames{
+          background-image: url('../images/videogames-jes.png');
+        }
+
       }
     }
     @include mobile{
@@ -266,8 +271,6 @@ body{
           width: 300px;
           height: 300px;
 
-          &__first{
-          }
         }
       }
     }
@@ -487,6 +490,11 @@ body{
           background-image: url('../images/linkedin-blanco.png');
         }
 
+        &__link--web{
+          background-image: url('../images/web-icon.png');
+        }
+        
+
         &:hover .home__footer__container-icons__logos__link{
           background-image: url('../images/github-negro.png');
         }
@@ -494,6 +502,11 @@ body{
         &:hover .home__footer__container-icons__logos__link--linkedin{
           background-image: url('../images/linkedin-negro.png');
         }
+
+        &:hover .home__footer__container-icons__logos__link--web{
+          background-image: url('../images/web-icon.png');
+        }
+
 
         &::before{
           content: '';
@@ -521,7 +534,8 @@ body{
 
         &__cont-thanks{
 
-          height: 100%;
+          height: 80%;
+          width: 80%;
 
           &__thanks{
             font-size: 20px;
@@ -558,7 +572,7 @@ body{
     grid-template: 
   "presentacion" 950px
   "skills" 550px
-  "projects" 1200px
+  "projects" 1000px
   "contact" 1200px
   "footer" 560px /
   auto;
@@ -706,7 +720,12 @@ body{
     }
   
   @include mobile{
-    height: 32px;
+    height: 60px;
+    background-color: #151515;
+
+    &__logo{
+      margin-left: 10px;
+    }
 
     &__container-all{
       display: none;
@@ -722,11 +741,20 @@ body{
       width: 100%;
     }
 
+    &__icon{
+
+      &__ham{
+        width: 45px;
+        height: 45px;
+        
+      }
+    }
+
     &__container-all-active{
       background-color: #151515;
       display: block;
       position: fixed;
-      top: 32px;
+      top: 60px;
       left: 0;
       flex-direction: column;
       height: 200px;
@@ -736,7 +764,11 @@ body{
 }
 
 .navbar-active{
-  background-color: black; 
+  background-color: black;
+
+  @include mobile{
+    background-color: #151515;
+  }
 }
 
 
